--- a/PasswordManger.Infrastructure/PasswordManager.Infrastructure.csproj
+++ b/PasswordManger.Infrastructure/PasswordManager.Infrastructure.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PasswordManager.Core\PasswordManager.Core.csproj" />
+    <ProjectReference Include="..\Contracts\Contracts.csproj"/>
   </ItemGroup>
 
 </Project>
