--- a/test/PasswordManager.Web.csproj
+++ b/test/PasswordManager.Web.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\PasswordManger.Infrastructure\PasswordManager.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
